--- a/Bootstrap_form.html
+++ b/Bootstrap_form.html
@@ -206,5 +206,23 @@
 </script>
 
 
+<script type="text/javascript">
+
+    // select elements from the DOM by specifying their unique identifiers:
+    var myDiv = document.getElementById("my-container")
+    var myParagraph = document.getElementById("my-message")
+  
+    // manipulate properties of an element:
+    myParagraph.innerHTML = "Fun times!"
+    myParagraph.style.color = "red"
+  
+    // can even create new elements:
+    var myHeading = document.createElement("h3")
+    myHeading.innerHTML = "This is a heading"
+    myDiv.appendChild(myHeading)
+  
+  </script>
+
+
   </body>
 </html>
